# greenwashing_detector

./: .gitignore  ESG_CHUNKING_SOLUTION.md  FRAMEWORK_AWARE_FLUFF_REMOVAL.md  FRAMEWORK_SPECIFIC_ANALYSIS_SUMMARY.md  INTEGRATED_TCFD_APPROACH.md  ISSUE_ANALYSIS_AND_SOLUTIONS.md  README.md  TCFD_ROUTING_LOGIC_SUMMARY.md  WORKFLOW_DIAGRAM.md  analysis_report.json  compliance_validation.md  debug_cdp_search.py  debug_paragraph_13.py  esg_claims.md  framework_detection.md  framework_detection_final_city_cement_20250708_195214.md  framework_detection_final_city_cement_20250708_195312.md  framework_detection_final_city_cement_20250708_195952.md  framework_detection_final_standard_chartered_20250708_200826.md  framework_detection_smart_city_cement_20250708_191340.md  framework_detection_smart_city_cement_20250708_194353.md  monitor_analysis.py  pyproject.toml  report.md  requirements.txt  section_extraction.md  streamlit_app.py  structure_analysis.md  test_framework_detection_final.py  web_search_monitoring_report_20250703_090348.json
output/: compliance_checker_validate_claims.md  esg_analyst_extract_esg_claims.md  framework_detection.md  framework_detector_detect_reporting_framework.md  framework_results.md  workflow.md  workflow_summary.md
src/greenwashing_detector/: crew.py  main.py  requirements.txt
src/greenwashing_detector/config/: agents.yaml  tasks.yaml
src/greenwashing_detector/tools/: __init__.py  fluff_remover.py  framework_glossary.py  gri_analyzer.py  pdf_loader.py  prompt_builder.py  section_extractor.py  tcfd_analyzer.py  toc_extractor.py  web_search.py
